<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RangerActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvwRangeTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bangers"
                android:text="@string/ranger"
                android:textAlignment="center"
                android:textSize="48sp" />

            <ImageView
                android:id="@+id/imgRangerIcon"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                app:srcCompat="@drawable/forest_ranger"
                tools:srcCompat="@drawable/forest_ranger" />

            <EditText
                android:id="@+id/edtRangerCode"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/code"
                android:inputType="number"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/edtRangerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <EditText
                android:id="@+id/edtRangerLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:textColorHint="#757575" />

            <TextView
                android:id="@+id/tvRangeShift"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/shift"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spnRangerShift"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp" />

            <EditText
                android:id="@+id/edtRangerSalary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/salary"
                android:inputType="number" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/btnRangerAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="rangerRegister"
                    app:srcCompat="@android:drawable/ic_input_add" />

                <ImageButton
                    android:id="@+id/btnRangerSearch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="rangerSearch"
                    app:srcCompat="@android:drawable/ic_menu_search"
                    app:tint="@color/black" />

                <ImageButton
                    android:id="@+id/btnRangerUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="rangerUpdate"
                    app:srcCompat="@android:drawable/ic_popup_sync"
                    app:tint="@color/black" />

                <ImageButton
                    android:id="@+id/btnRangerDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="rangerDelete"
                    app:srcCompat="@android:drawable/ic_delete" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>